--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "scripts": {
-        "test": "jest --testMatch '**/?(*.)+(test).js'"
+        "test": "jest --testMatch '**/?(*.)+(test).js'",
+        "jest": "jest"
     },
     "dependencies": {
         "rewire": "^6.0.0",
         "uniqid": "^5.4.0",
-        "validator": "^13.7.0"
+        "validator": "^13.11.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.22.5",
