--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "tsc": "tsc --project tsconfig.json",
         "lint": "eslint src/**/*.{ts,js}",
         "lint-fix": "eslint --fix src/**/*.{ts,js}",
-        "start": "ts-node -T src/server.ts"
+        "start": "ts-node-dev -T src/server.ts"
     },
     "dependencies": {
         "cors": "^2.8.5",
@@ -13,6 +13,7 @@
         "morgan": "^1.10.0",
         "rewire": "^6.0.0",
         "ts-node": "^10.7.0",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^4.6.3",
         "validator": "^13.7.0"
     },
