--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "ts-node": "^10.7.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.6.3",
+        "uuid": "^9.0.1",
         "validator": "^13.7.0"
     },
     "devDependencies": {
