--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "ts-node-dev -T src/server.ts"
     },
     "dependencies": {
+        "@types/uuid": "^9.0.6",
         "cors": "^2.8.5",
         "express": "^4.18.0",
         "http-errors": "^2.0.0",
