Added some COMP1531 quick patches

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
         "tsc": "tsc --project tsconfig.json",
         "lint": "eslint src/**/*.{ts,js}",
         "lint-fix": "eslint --fix src/**/*.{ts,js}",
-        "start": "ts-node-dev -T src/server.ts"
+        "start": "ts-node-dev -T src/server.ts",
+        "ts-node-coverage": "nyc --reporter=text --reporter=lcov ts-node -T src/server.ts",
+        "cleanup-sync-request": "pkill -f node_modules/sync-rpc/lib/worker.js > /dev/null 2>&1",
+        "posttest": "npm run cleanup-sync-request || true"
     },
     "dependencies": {
         "@types/uuid": "^9.0.6",
