--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "lint": "eslint src/**/*.{ts,js}",
         "lint-fix": "eslint --fix src/**/*.{ts,js}",
         "lint-all": "eslint '**/*.{js,ts}'",
-        "lint_fix-all": "eslint --fix '**/*.{ts,js}'",
+        "lint-fix-all": "eslint --fix '**/*.{ts,js}'",
         "start": "ts-node-dev -T src/server.ts",
         "ts-node-coverage": "nyc --reporter=text --reporter=lcov ts-node -T src/server.ts",
         "cleanup-sync-request": "pkill -f node_modules/sync-rpc/lib/worker.js > /dev/null 2>&1",
