--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@types/uuid": "^9.0.6",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "^4.18.0",
         "http-errors": "^2.0.0",
         "middleware-http-errors": "^0.1.1",
