--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
         "axios": "^1.6.0",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
-        "express": "^4.18.0",
+        "csv-writer": "^1.6.0",
+        "express": "^4.18.2",
         "http-errors": "^2.0.0",
         "is-image-header": "^3.0.1",
         "middleware-http-errors": "^0.1.2",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "rewire": "^6.0.0",
         "ts-node": "^10.7.0",
         "ts-node-dev": "^2.0.0",
